--- a/KosaESS/src/main/resources/static/css/admin/lecture_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/lecture_list.css
@@ -83,9 +83,9 @@
 	display: flex;
 }
 
-.insert div span{
+.insert div span {
 	color: #0E5881;
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .table_wrap {
@@ -93,6 +93,8 @@
 }
 
 .content_info_wrap {
+	    display: flex;
+    justify-content: space-between;
 	font-weight: bold;
 }
 
@@ -134,12 +136,16 @@
 	border: none;
 	border-radius: 3px;
 	padding: 5px;
-}
-
-.update_btn {
 	background-color: #3E799A;
 }
 
-.delete_btn {
-	background-color: #9FBCCD;
+.subject_table, .professor_table {
+	height: 70%;
+	overflow-y: scroll;
+}
+
+.lecture_table {
+	height: 85%;
+	border: 1px solid #CFDEE6;
+	overflow-y: scroll;
 }
